Refactor environment variable usage to utilize getAppUrl function for redirect URIs in authentication flows. Updated .env.local.example and README.md to clarify local and production URL configurations. Adjusted setup-local script comments for consistency.

--- a/.env.local.example
+++ b/.env.local.example
@@ -16,5 +16,5 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Encryption (minimum 32 characters for AES-256)
 ENCRYPTION_KEY=your-32-character-encryption-key-here!!
 
-# App URL (for OAuth redirects - server-side only)
+# App URL (local uniquement - en prod Vercel utilise VERCEL_URL automatiquement)
 APP_URL=http://localhost:3000
