Enhance production migration script to require DATABASE_URL or POSTGRES_URL for successful migrations. Updated .env.production.example to highlight the necessity of DATABASE_URL for both build migrations and runtime. Added warnings in the migration script for missing environment variables.

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,5 +1,6 @@
 # Production - à configurer dans Vercel (Settings > Environment Variables)
 # Ne jamais committer les vraies valeurs
+# IMPORTANT : DATABASE_URL est requis pour les migrations au build ET pour le runtime
 
 # Database (Drizzle - utilise le pooler pour les connexions serverless)
 DATABASE_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
