Update environment variable configurations for Supabase and OAuth. Added NEXT_PUBLIC_* variables to .env.local.example and .env.production.example for client-side access. Enhanced README.md with clearer instructions on redirect URIs for Google OAuth. Updated setup-local script to ensure consistency in environment variable handling.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,12 @@
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
 
-# Supabase (local - no NEXT_PUBLIC_* variables)
+# Supabase
 SUPABASE_URL=http://localhost:54321
 SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Mistral
 MISTRAL_API_KEY=your-mistral-api-key
@@ -16,5 +18,6 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Encryption (minimum 32 characters for AES-256)
 ENCRYPTION_KEY=your-32-character-encryption-key-here!!
 
-# App URL (local uniquement - en prod Vercel utilise VERCEL_URL automatiquement)
+# App URL (local - utiliser localhost partout pour cohérence avec cookies OAuth)
 APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
