--- a/.env.production.example
+++ b/.env.production.example
@@ -5,10 +5,12 @@
 # Database (Drizzle - utilise le pooler pour les connexions serverless)
 DATABASE_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
 
-# Supabase (server-side only)
+# Supabase
 SUPABASE_URL=https://[PROJECT_REF].supabase.co
 SUPABASE_ANON_KEY=eyJ...
 SUPABASE_SERVICE_ROLE_KEY=eyJ...
+NEXT_PUBLIC_SUPABASE_URL=https://[PROJECT_REF].supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJ...
 
 # Mistral
 MISTRAL_API_KEY=your-mistral-api-key
