--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -201,7 +201,7 @@ enable_signup = true
 # If enabled, a user will be required to confirm any email change on both the old, and new email
 # addresses. If disabled, only the new email is required to confirm.
 double_confirm_changes = true
-# If enabled, users need to confirm their email address before signing in.
+# Si true : validation email requise (nécessite SMTP configuré). En local sans SMTP, false = connexion directe.
 enable_confirmations = false
 # If enabled, users will need to reauthenticate or have logged in recently to change their password.
 secure_password_change = false
