--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -146,10 +146,21 @@ max_indexes = 5
 [auth]
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
-# in emails.
-site_url = "http://localhost:3000"
-# A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://localhost:3000", "http://localhost:3000/auth/callback", "http://127.0.0.1:3000/auth/callback"]
+# in emails. En prod, utilise supabase config push pour pousser cette config vers le projet Cloud.
+site_url = "https://saas-ai-chat-xi.vercel.app/"
+# URLs autorisées pour les redirects OAuth. Inclut local (dev) + prod (Vercel).
+# Après modification : npx supabase config push pour mettre à jour le projet Cloud.
+additional_redirect_urls = [
+  "https://localhost:3000",
+  "http://localhost:3000/auth/callback",
+  "http://127.0.0.1:3000/auth/callback",
+  "https://saas-ai-chat-xi.vercel.app/",
+  "https://saas-ai-chat-xi.vercel.app/auth/callback",
+  "https://saas-ai-chat-xi.vercel.app/**",
+  "https://saas-ai-chat-vincent-lacostes-projects.vercel.app/",
+  "https://saas-ai-chat-vincent-lacostes-projects.vercel.app/**",
+  "https://saas-*-*-*.vercel.app/**"
+]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # JWT issuer URL. If not set, defaults to the local API URL (http://127.0.0.1:<port>/auth/v1).
